@@ -4,6 +4,7 @@ Changelog
 1.9 - Unreleased
 ================
 
+* Add URL support for input templates
 
 
 1.8 - 2010-06-08
